<resources>
    <string name="app_name">Palitrokes</string>
    <string name="explicacion">El que se quede con el último palo pierde!!</string>
    <string name="fallo_auth">Fallo en la autenticación</string>
    <string name="jugador">Jugador</string>
    <string name="buscando">Buscando Rival...</string>
    <string name="amigos_online">Amigos Online:</string>
    <string name="jugadores_online">Jugadores Online: </string>
    <string name="sin_salas">De momento no hay salas vacías</string>
    <string name="encontrado_rival">Encontrado Rival, esperando que esté preparado</string>
    <string name="preparado">¡Preparado!</string>
    <string name="preparado_esperando">Preparado ... Esperando Rival ...</string>
    <string name="amigo_add">Añadido como Amigo</string>
    <string name="amigo_del">Eliminado como Amigo</string>
    <string name="mensaje_permisos">Hace falta que actives los permisos para Personalizar tu Avatar ...</string>
    <string name="nickname">Nickname</string>
    <string name="victorias">Victorias</string>
    <string name="jugar">Jugar</string>
    <string name="records_mundiales">Records Mundiales</string>
    <string name="jugar_online">Jugar Online</string>
    <string name="buscar_rival">Buscar Rival</string>
    <string name="rival_ok">Rival OK?</string>
    <string name="tu_ok">Tu OK?</string>
    <string name="mensaje_estado">Mensaje Estado</string>
    <string name="nomeganas">¿A que no\nme ganas?</string>
    <string name="amigosonline">Amigos online: </string>
    <string name="jugonline">Jugadores Online: </string>
    <string name="esperandorival">Esperando al rival</string>
    <string name="victorias2">Victorias: </string>
    <string name="nombreprota">Tío Nim</string>
    <string name="victorias8">Victorias: ∞</string>
    <string name="nivel">"Nivel "</string>
    <string name="selecciona">Selecciona al menos 1 palo</string>
    <string name="ganador">El ganador es:</string>
    <string name="unpalo">Debes dejar al menos 1 palo y ganas!!!</string>
    <string name="abandono">"Ha habido abandono ... "</string>
    <string name="win">Has Ganado ¡Enhorabuena!</string>
    <string name="resultado">"Gana Palitrokes. Has alcanzado el nivel "</string>
    <string name="perdido">Lo siento has perdido!!</string>
    <string name="palabrota">No puedes utilizar esta palabra!!</string>
    <string name="noplayers">No hay jugadores online disponibles para jugar</string>
    <string name="rival">Rival</string>
</resources>
