<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogJugar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:text="@string/buscar_rival"
        android:textSize="24sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/rivalImageIV"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/search" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/estadoRivalTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/rival_ok" />

        <ImageView
            android:id="@+id/imageReadyRivalIV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/rojo"
            app:srcCompat="@drawable/update" />

        <TextView
            android:id="@+id/estadoJugadorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tu_ok" />

        <ImageView
            android:id="@+id/imageReadyJugadorTV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/rojo"
            app:srcCompat="@drawable/update" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/readyBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/preparado" />

        <ImageButton
            android:id="@+id/dialog_favoritosBTN"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/corazon"
            android:visibility="invisible"
            android:scaleType="fitCenter" />

    </LinearLayout>


    <TextView
        android:id="@+id/mensajeEstadoTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:minLines="1"
        android:text="@string/mensaje_estado" />

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="5dp"
        android:background="@color/celeste"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>